# resume-screening

./: .dockerignore  Dockerfile  Jenkinsfile  Makefile  README.md  app.py  chains.py  pyproject.toml
app/: workflow.py
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
monitoring/: grafana-values.yaml  install.sh  loki-values.yaml  prometheus-values.yaml
tests/: test_app.py
